--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="ok_export">OK. Exported %1$s</string>
 
     <string name="error_file_not_found">Error: file not found</string>
+    <string name="error_file_not_readable">Error: file not readable</string>
     <string name="error_io_exception">Error: IO exception</string>
     <string name="error_parser_error">Error: parser error %1$s</string>
     <string name="error_export_failed">Error: failed export %1$s</string>
