--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -105,6 +105,7 @@
     <!-- UNUSED string name="warning_not_cgal">Warning: not CGAL text file %1$s</string -->
     <!-- UNUSED string name="warning_not_stl">Warning: not stl file %1$s</string -->
     <string name="warning_no_cwd">Warning: missing base path</string>
+    <string name="warning_no_parent">Warning: cannot go to parent folder</string>
 
     <string name="done_fractals">Done fractals dims</string>
     <string name="done_convexhull">Done convex-hull walls</string>
